[gd_scene load_steps=13 format=3 uid="uid://bn4dd7hcawo6o"]

[ext_resource type="Script" path="res://Scenes/GameMapEditor/League Editor/Tournament Nodes/LeagueNode.gd" id="1_a2dn8"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/League Editor/Tournament Nodes/InputTeamsPopPanel.gd" id="2_nht7h"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/League Editor/Tournament Nodes/SpecificTeamPopPanel.gd" id="3_p47s3"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/League Editor/Tournament Nodes/TeamsList.gd" id="4_md3hs"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/League Editor/Tournament Nodes/OtherTournamentPanel.gd" id="5_1ty7c"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/League Editor/Tournament Nodes/TournamentSelection.gd" id="6_q0hj8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u7v0"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0.168627, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpwwb"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s00ql"]
content_margin_left = 10.0
bg_color = Color(0, 0.32549, 0.529412, 1)

[sub_resource type="Theme" id="Theme_h5b2j"]
GraphNode/styles/panel = SubResource("StyleBoxFlat_7u7v0")
GraphNode/styles/panel_selected = SubResource("StyleBoxFlat_hpwwb")
GraphNode/styles/titlebar = SubResource("StyleBoxFlat_s00ql")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dupsj"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.337255, 0.337255, 0.337255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k4ocj"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="GraphNode" type="GraphNode"]
custom_minimum_size = Vector2(600, 525)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_h5b2j")
title = "League Stage"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_a2dn8")

[node name="Name&ID" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="LineEdit" type="LineEdit" parent="Name&ID"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage Name"
alignment = 1
max_length = 40

[node name="Label" type="Label" parent="Name&ID"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage ID: "
horizontal_alignment = 1

[node name="DatesInput" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="StartDate" type="Label" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Date"
horizontal_alignment = 1

[node name="StartMonthInput" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 12
allow_reselect = true
popup/item_0/text = "January"
popup/item_0/id = 0
popup/item_1/text = "February"
popup/item_1/id = 1
popup/item_2/text = "March"
popup/item_2/id = 2
popup/item_3/text = "April"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_7/text = "August"
popup/item_7/id = 7
popup/item_8/text = "September"
popup/item_8/id = 8
popup/item_9/text = "October"
popup/item_9/id = 9
popup/item_10/text = "November"
popup/item_10/id = 10
popup/item_11/text = "December"
popup/item_11/id = 11

[node name="StartDayInput" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
allow_reselect = true

[node name="EndDate" type="Label" parent="DatesInput"]
layout_mode = 2
text = "End Date"
horizontal_alignment = 1

[node name="EndMonthInput" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 12
allow_reselect = true
popup/item_0/text = "January"
popup/item_0/id = 0
popup/item_1/text = "February"
popup/item_1/id = 1
popup/item_2/text = "March"
popup/item_2/id = 2
popup/item_3/text = "April"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_7/text = "August"
popup/item_7/id = 7
popup/item_8/text = "September"
popup/item_8/id = 8
popup/item_9/text = "October"
popup/item_9/id = 9
popup/item_10/text = "November"
popup/item_10/id = 10
popup/item_11/text = "December"
popup/item_11/id = 11

[node name="EndDayInput" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
allow_reselect = true

[node name="LeagueSpecificOptions" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="NumGamesPerTeam" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Games Each Team Will Play"
horizontal_alignment = 1

[node name="NumGamesPerTeamInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
rounded = true
alignment = 1
suffix = "Points"

[node name="WinPoints" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Points Gained Per Win"
horizontal_alignment = 1

[node name="WinPointsInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
value = 3.0
rounded = true
alignment = 1
suffix = "Points"

[node name="DrawPoints" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
text = "Number of Points Gained Per Draw"
horizontal_alignment = 1

[node name="DrawPointsInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
min_value = -100.0
value = 1.0
rounded = true
alignment = 1
suffix = "Points"

[node name="LosePoints" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Points Gained Per Lose"
horizontal_alignment = 1

[node name="LosePointsInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
rounded = true
alignment = 1
suffix = "Points"

[node name="TeamListArea" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="TeamList" type="ItemList" parent="TeamListArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
fixed_icon_size = Vector2i(25, 25)

[node name="VBoxContainer" type="VBoxContainer" parent="TeamListArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddTeam" type="MenuButton" parent="TeamListArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Add Qualifying Team"
flat = false
item_count = 4
popup/item_0/text = "Input Teams"
popup/item_0/id = 0
popup/item_1/text = "Specific Team"
popup/item_1/id = 1
popup/item_2/text = "Other Tournament/Stage"
popup/item_2/id = 2
popup/item_3/text = "Ranking"
popup/item_3/id = 3

[node name="DeleteTeam" type="Button" parent="TeamListArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Delete Team"

[node name="InputTeamsPopPanel" type="PopupPanel" parent="."]
title = "Choose How Team Qualifys"
initial_position = 2
size = Vector2i(500, 113)
theme_override_styles/panel = SubResource("StyleBoxFlat_dupsj")
script = ExtResource("2_nht7h")

[node name="VBoxContainer" type="VBoxContainer" parent="InputTeamsPopPanel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 103.0

[node name="GridContainer" type="GridContainer" parent="InputTeamsPopPanel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="InputTeams" type="Label" parent="InputTeamsPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Input Teams: "

[node name="BlankHolder" type="Label" parent="InputTeamsPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="NumTeamAccept" type="Label" parent="InputTeamsPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Numbers of Teams to Accept from Previous Stage"
horizontal_alignment = 1

[node name="NumTeamsAcceptInput" type="SpinBox" parent="InputTeamsPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
rounded = true
allow_greater = true
alignment = 1
suffix = "Teams"

[node name="DoneButton" type="Button" parent="InputTeamsPopPanel/VBoxContainer"]
layout_mode = 2
text = "Done"

[node name="SpecificTeamPopPanel" type="PopupPanel" parent="."]
title = "Select Specific Team to Add"
initial_position = 2
size = Vector2i(353, 551)
script = ExtResource("3_p47s3")

[node name="VBoxContainer" type="VBoxContainer" parent="SpecificTeamPopPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 349.0
offset_bottom = 547.0

[node name="GridContainer" type="GridContainer" parent="SpecificTeamPopPanel/VBoxContainer"]
layout_mode = 2

[node name="SpecificTeam" type="Label" parent="SpecificTeamPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Specific Team:"

[node name="BlankHolder" type="Label" parent="SpecificTeamPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChooseTeam" type="Label" parent="SpecificTeamPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Please Choose A Team From The List Below:"
horizontal_alignment = 1

[node name="BlankHolder2" type="Label" parent="SpecificTeamPopPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "                  "
horizontal_alignment = 1

[node name="TeamsList" type="ItemList" parent="SpecificTeamPopPanel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 400)
layout_mode = 2
fixed_icon_size = Vector2i(25, 25)
script = ExtResource("4_md3hs")

[node name="DoneButton" type="Button" parent="SpecificTeamPopPanel/VBoxContainer"]
layout_mode = 2
text = "Done"

[node name="OtherTournamentPanel" type="PopupPanel" parent="."]
initial_position = 2
size = Vector2i(598, 215)
theme_override_styles/panel = SubResource("StyleBoxFlat_k4ocj")
script = ExtResource("5_1ty7c")

[node name="VBoxContainer" type="VBoxContainer" parent="OtherTournamentPanel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 588.0
offset_bottom = 205.0

[node name="GridContainer" type="GridContainer" parent="OtherTournamentPanel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="OtherTournment" type="Label" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Other Tournament/Stage:"

[node name="BlankHolder" type="Label" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "                                                   "

[node name="ChooseTournament" type="Label" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Please Choose A Tournament and Stage Below:"

[node name="BlankHolder2" type="Label" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="WinnerCheckMark" type="Label" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Winner?"
horizontal_alignment = 1

[node name="WinnersInput" type="CheckBox" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TournamentSelection" type="OptionButton" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2
script = ExtResource("6_q0hj8")

[node name="StageSelection" type="OptionButton" parent="OtherTournamentPanel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="OtherTournamentPanel/VBoxContainer"]
layout_mode = 2
text = "Done"

[node name="RankingPanel" type="PopupPanel" parent="."]
initial_position = 2
size = Vector2i(939, 144)
always_on_top = true

[node name="VBoxContainer" type="VBoxContainer" parent="RankingPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 935.0
offset_bottom = 140.0

[node name="GridContainer" type="GridContainer" parent="RankingPanel/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Rankings:"

[node name="BlankHolder" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "                                                   "

[node name="BlankHolder4" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "                                                   "

[node name="PleaseChooseBelow" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Please Enter Ranking to Choose From and Position"

[node name="BlankHolder2" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "                                                   "

[node name="BlankHolder5" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "                                                   "

[node name="RankingSystem" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ranking System"

[node name="PositionInRanking" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Position in Ranking   "

[node name="PositionInLeague" type="Label" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Position in League (League Ranking Only) "

[node name="RankingSystemInput" type="OptionButton" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="PositionInRankingInput" type="OptionButton" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="PositionInLeagueInput" type="OptionButton" parent="RankingPanel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="RankingPanel/VBoxContainer"]
layout_mode = 2
text = "Done"

[connection signal="text_changed" from="Name&ID/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="item_selected" from="DatesInput/StartMonthInput" to="." method="_on_start_month_input_item_selected"]
[connection signal="item_selected" from="DatesInput/StartDayInput" to="." method="_on_start_day_input_item_selected"]
[connection signal="item_selected" from="DatesInput/EndMonthInput" to="." method="_on_end_month_input_item_selected"]
[connection signal="item_selected" from="DatesInput/EndDayInput" to="." method="_on_end_day_input_item_selected"]
[connection signal="value_changed" from="LeagueSpecificOptions/NumGamesPerTeamInput" to="." method="_on_num_games_per_team_input_value_changed"]
[connection signal="value_changed" from="LeagueSpecificOptions/WinPointsInput" to="." method="_on_win_points_input_value_changed"]
[connection signal="value_changed" from="LeagueSpecificOptions/DrawPointsInput" to="." method="_on_draw_points_input_value_changed"]
[connection signal="value_changed" from="LeagueSpecificOptions/LosePointsInput" to="." method="_on_lose_points_input_value_changed"]
[connection signal="pressed" from="TeamListArea/VBoxContainer/DeleteTeam" to="." method="_on_delete_team_pressed"]
[connection signal="value_changed" from="InputTeamsPopPanel/VBoxContainer/GridContainer/NumTeamsAcceptInput" to="InputTeamsPopPanel" method="_on_num_teams_accept_input_value_changed"]
[connection signal="pressed" from="InputTeamsPopPanel/VBoxContainer/DoneButton" to="InputTeamsPopPanel" method="_on_done_button_pressed"]
[connection signal="item_selected" from="SpecificTeamPopPanel/VBoxContainer/GridContainer/TeamsList" to="SpecificTeamPopPanel" method="_on_teams_list_item_selected"]
[connection signal="pressed" from="SpecificTeamPopPanel/VBoxContainer/DoneButton" to="SpecificTeamPopPanel" method="_on_done_button_pressed"]
[connection signal="toggled" from="OtherTournamentPanel/VBoxContainer/GridContainer/WinnersInput" to="OtherTournamentPanel" method="_on_winners_input_toggled"]
[connection signal="item_selected" from="OtherTournamentPanel/VBoxContainer/GridContainer/TournamentSelection" to="OtherTournamentPanel" method="_on_tournament_selection_item_selected"]
[connection signal="pressed" from="OtherTournamentPanel/VBoxContainer/DoneButton" to="OtherTournamentPanel" method="_on_done_button_pressed"]
